# ffgui

./: .clineignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  FFGui  README.md  build.ninja  cmake_install.cmake
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
FFGui_autogen/: deps
FFGui_autogen/PRMOGMWJPH/: moc_FFGuiApplication.cpp  moc_FFGuiApplication.cpp.d
FFGui_autogen/RZ4CM6YYJ6/: moc_EffectStackWidget.cpp  moc_EffectStackWidget.cpp.d  moc_MonitorWidget.cpp  moc_MonitorWidget.cpp.d  moc_ProjectBinWidget.cpp  moc_ProjectBinWidget.cpp.d  moc_RenderDialog.cpp  moc_RenderDialog.cpp.d  moc_TimelineWidget.cpp  moc_TimelineWidget.cpp.d
FFGui_autogen/UVLADIE3JM/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/core/: Clip.h  FFGuiApplication.cpp  FFGuiApplication.h  FFmpegProbe.cpp  FFmpegProbe.h  ProjectModel.h  ThemeManager.cpp  ThemeManager.h
src/widgets/: EffectStackWidget.cpp  EffectStackWidget.h  MonitorWidget.cpp  MonitorWidget.h  ProjectBinWidget.cpp  ProjectBinWidget.h  RenderDialog.cpp  RenderDialog.h  TimelineWidget.cpp  TimelineWidget.h
